--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@octokit/rest": "^21.1.0",
+    "crypto-randomuuid": "^1.0.0",
     "dotenv": "^16.4.7",
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.8",
@@ -21,7 +22,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "styled-components": "^6.0.2",
-    "swr": "^2.3.6"
+    "swr": "^2.3.6",
+    "use-local-storage-state": "^19.5.0"
   },
   "devDependencies": {
     "@svgr/webpack": "^8.0.1",
